--- a/settings/extensions/nix/nix.toml
+++ b/settings/extensions/nix/nix.toml
@@ -39,6 +39,8 @@
 
 # [[ you can add tools for your project right here or at the bottom ]]
 
+[[packages]]
+load = [ "emscripten" ]
 # 
 # Node.js
 # 
